# SEG-rc

./: .gitignore  AttnProcessor.py  README.md  SEGCFGSelfAttn.py  activate.sh  blur.py  config.yaml  main.py  metrics.py  pipeline_seg.py  pipeline_seg_controlnet.py  pyproject.toml  run.sh  speed_metrics_cuda.json  utils.py  visualize.ipynb
diffusion_utils/: AttnProcessor.py  SEGCFGSelfAttn.py  blur.py  metrics.py  pipeline_seg.py
notebooks/: metric_visualization.ipynb  visualize.ipynb
scripts/: activate.sh  run.sh
