[tool.poetry]
name = "seg-sdxl-mlrc"
version = "0.1.0"
description = ""
authors = ["Sar2580P <sporwal1818@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
torch = "^2.6.0"
diffusers = "^0.32.2"
transformers = "^4.48.2"
accelerate = "^1.3.0"
yq = "^3.4.3"
jq = "^1.8.0"
ipykernel = "^6.29.5"
blosc = "^1.11.2"
kaggle = "^1.6.17"
umap = "^0.1.1"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
hdbscan = "^0.8.40"
omegaconf = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
